# cmsweb-cicd-flask

./: Dockerfile  setup.cfg
.github/workflows/: build.yml
app/: main.py
deploy/: flask.yaml
tests/: tests.py
