[metadata]
# replace with your username:
name = cmsweb-cicd-flask-panos512
author = Panos Paparrigopoulos
author_email = paparrigopoulosp@gmail.com
description = A test app for CMSWeb cicd.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Panos512/cmsweb-cicd-flask
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6